Fix hero on mobile device

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,6 +13,14 @@
   margin-bottom: -1px;
 }
 
+.hero-bg *,
+.hero-image * {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .hero-bg {
   position: absolute;
   width: 100%;
